Cockatrice Change Log

==================== Cockatrice 0.6.0 ====================

January 30, 2019

* Synchronize the latest index from the leader node
* Print default values in CLI usage
* Force log compaction
* Expose snapshot
* Add serializer and deserializer
* Disable ram storage
* Add Cluster API