@@ -1,8 +1,15 @@
 Cockatrice Change Log
 
+==================== Cockatrice 0.6.1 ====================
+
+December 25, 2018
+
+* Fix document build error
+
+
 ==================== Cockatrice 0.6.0 ====================
 
-January 30, 2019
+December 25, 2018
 
 * Synchronize the latest index from the leader node
 * Print default values in CLI usage
